--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -31,41 +31,42 @@ $tertiary: #949494;
 $secondary: #6e6e6e;
 $grayBG: #d7d4d4;
 $grayBG2: #605c59;
+$mineshaft: #282828;
 
 //</ПЕРЕМЕННЫЕ>===========================================================================================================
 //<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============================================================================================
 @import "null";
 body {
-  color: $primary;
-  &.lock {
-    overflow: hidden;
-  }
+    color: $primary;
+    &.lock {
+        overflow: hidden;
+    }
 }
 //</ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============================================================================================
 
 //<ОБОЛОЧКА>===========================================================================================================
 .wrapper {
-  width: 100%;
-  min-height: 100%;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
+    width: 100%;
+    min-height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 .home-bg-wrapper {
-  background: url("../img/home-bg.png") 0 0 / cover no-repeat;
-  position: relative;
-  &::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
+    background: url("../img/home-bg.png") 0 0 / cover no-repeat;
+    position: relative;
+    &::before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
 }
 .page {
-  flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 //</ОБОЛОЧКА>===========================================================================================================
 
@@ -76,3 +77,4 @@ body {
 @import "tabs";
 @import "home";
 @import "services";
+@import "footer";
