--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -31,6 +31,7 @@ $tertiary: #949494;
 $secondary: #6e6e6e;
 $grayBG: #d7d4d4;
 $grayBG2: #605c59;
+$grayBG3: #d7d4d4;
 
 //</ПЕРЕМЕННЫЕ>===========================================================================================================
 //<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============================================================================================
