add html/ccs layout for design block

--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -152,7 +152,7 @@
         position: absolute;
         width: 32px;
         height: 1px;
-        left: 0;
+        left: 10px;
         transition: all 0.3s ease 0s;
       }
 
@@ -160,7 +160,7 @@
         position: absolute;
         background-color: #fff;
         width: 22px;
-        left: 0;
+        left: 10px;
         height: 1px;
         top: 9px;
         transition: all 0.3s ease 0s;
