--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -33,10 +33,14 @@ $grayBG: #d7d4d4;
 $grayBG2: #605c59;
 $grayBG3: #d7d4d4;
 $mineshaft: #282828;
+$neutralLight: #c2c2c2;
 
 //</ПЕРЕМЕННЫЕ>===========================================================================================================
 //<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============================================================================================
 @import "null";
+html {
+  scroll-behavior: smooth;
+}
 body {
   color: $primary;
   &.lock {
